修改了一系列问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="my_address">我的地址</string>
     <string name="manage_address">管理地址</string>
     <string name="rule">
-        <u>规则说明</u>>
+        <u>规则说明</u>
     </string>
     <string name="integral">积分(个)</string>
     <string name="vip">会员卡</string>
